// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component should render correctly 1`] = `
<div
  className="app"
>
  <div
    className="mainContainer"
  >
    <div
      className="participantContainer"
    >
      <Participant
        fontSize="40px"
        height="405px"
        isDominantSpeaker={true}
        key="test-participant-1"
        participant={
          Object {
            "identity": "test-participant-1",
          }
        }
        width="720px"
      />
      <Participant
        fontSize="40px"
        height="405px"
        isDominantSpeaker={false}
        key="test-participant-2"
        participant={
          Object {
            "identity": "test-participant-2",
          }
        }
        width="720px"
      />
      <Participant
        fontSize="40px"
        height="405px"
        isDominantSpeaker={false}
        key="test-participant-3"
        participant={
          Object {
            "identity": "test-participant-3",
          }
        }
        width="720px"
      />
    </div>
  </div>
</div>
`;

exports[`App component should render correctly when presentation mode is active 1`] = `
<div
  className="app isPresentationModeActive"
>
  <div
    className="mainContainer"
  >
    <div
      className="presentationContainer"
    >
      <div
        className="presentationBanner"
      >
        <p
          data-cy-presentation-banner={true}
        >
          test-participant-2
           is presenting.
        </p>
      </div>
      <div
        className="presentationVideoContainer"
        data-cy-presentation-container={true}
      >
        <PresentationParticipant
          participant={
            Object {
              "identity": "test-participant-2",
            }
          }
        />
      </div>
    </div>
    <div
      className="participantContainer"
    >
      <Participant
        fontSize="40px"
        height="405px"
        isDominantSpeaker={false}
        key="test-participant-2"
        participant={
          Object {
            "identity": "test-participant-2",
          }
        }
        width="720px"
      />
      <Participant
        fontSize="40px"
        height="405px"
        isDominantSpeaker={true}
        key="test-participant-1"
        participant={
          Object {
            "identity": "test-participant-1",
          }
        }
        width="720px"
      />
      <Participant
        fontSize="40px"
        height="405px"
        isDominantSpeaker={false}
        key="test-participant-3"
        participant={
          Object {
            "identity": "test-participant-3",
          }
        }
        width="720px"
      />
      <div
        className="participantCountContainer"
      >
        <p>
          + 
          1
           more
        </p>
      </div>
    </div>
  </div>
</div>
`;
